[cs-demo] Fixed prop table CSTooltip content disappearing in dark mode

--- a/cs-ui-demo/src/sass/_csd-code.scss
+++ b/cs-ui-demo/src/sass/_csd-code.scss
@@ -64,6 +64,8 @@
 		white-space: nowrap;
 
 		code.csd-inline-code {
+			background: var(--csd-tooltip-body-bg);
+			color: var(--csd-tooltip-body-c);
 			margin: 0;
 			text-align: center;
 		}
